--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev":"run-p server webpack",
+    "webpack":"webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server",
     "start": "node server.js"
